--- a/src/Catty/Resources/Localization/he.lproj/Localizable.strings
+++ b/src/Catty/Resources/Localization/he.lproj/Localizable.strings
@@ -50,6 +50,9 @@
 "Add sound" = "הוסף צליל";
 
 /* No comment provided by engineer. */
+"Add trusted domain" = "Add trusted domain";
+
+/* No comment provided by engineer. */
 "Agree" = "Agree";
 
 /* No comment provided by engineer. */
@@ -67,11 +70,20 @@
 /* No comment provided by engineer. */
 "Allow the app to send crash reports automatically" = "Allow the app to send crash reports automatically";
 
+/* No comment provided by engineer. */
+"Allow web access" = "Allow web access";
+
 /* paint */
 "Alpha" = "אלפא";
 
 /* No comment provided by engineer. */
 "altitude" = "altitude";
+
+/* No comment provided by engineer. */
+"Always" = "תמיד";
+
+/* No comment provided by engineer. */
+"Always allow web access" = "Always allow web access";
 
 /* No comment provided by engineer. */
 "An image with the same name already exists, try again." = "קיימת תמונה עם שם זהה, נסה שוב.";
@@ -89,10 +101,16 @@
 "and" = "וגם";
 
 /* No comment provided by engineer. */
+"and store answer in" = "and store answer in";
+
+/* No comment provided by engineer. */
 "and store written answer in " = "and store written answer in ";
 
 /* No comment provided by engineer. */
 "and wait" = "and wait";
+
+/* No comment provided by engineer. */
+"and width" = "and width";
 
 /* No comment provided by engineer. */
 "Animate brick-parts" = "Animate brick-parts";
@@ -176,6 +194,9 @@
 "Bassoon" = "Bassoon";
 
 /* No comment provided by engineer. */
+"Be very careful before allowing access, since the link may expose your personal information, such as your precise geographical location or any text you have entered to malicious other persons or to the public. See our wiki for more information why this can be extremely dangerous. By always allowing access, you will not be asked again to confirm web addresses from this domain. If you want to revoke this permission later, you can remove the domain from the list of trusted domains in the settings of this app." = "Be very careful before allowing access, since the link may expose your personal information, such as your precise geographical location or any text you have entered to malicious other persons or to the public. See our wiki for more information why this can be extremely dangerous. By always allowing access, you will not be asked again to confirm web addresses from this domain. If you want to revoke this permission later, you can remove the domain from the list of trusted domains in the settings of this app.";
+
+/* No comment provided by engineer. */
 "becomes true" = "becomes true";
 
 /* No comment provided by engineer. */
@@ -239,7 +260,7 @@
 "Categories" = "קטגוריות";
 
 /* No comment provided by engineer. */
-"Catrobat community" = "Catrobat community";
+"Catrobat community" = "קהילת Catrobat";
 
 /* No comment provided by engineer. */
 "ceiling" = "ceiling";
@@ -347,7 +368,7 @@
 "Continue" = "המשך";
 
 /* No comment provided by engineer. */
-"Continue project" = "Continue project";
+"Continue project" = "מיזם קיים";
 
 /* No comment provided by engineer. */
 "Control" = "שליטה";
@@ -372,6 +393,9 @@
 
 /* No comment provided by engineer. */
 "Create account" = "Create account";
+
+/* No comment provided by engineer. */
+"Create as list" = "Create as list";
 
 /* No comment provided by engineer. */
 "Create patterns for stiching machines" = "Create patterns for stiching machines";
@@ -479,6 +503,9 @@
 "Deletion mode" = "Deletion mode";
 
 /* No comment provided by engineer. */
+"Deny" = "דחייה";
+
+/* No comment provided by engineer. */
 "Description" = "תאור";
 
 /* No comment provided by engineer. */
@@ -536,6 +563,12 @@
 "Download" = "הורד";
 
 /* No comment provided by engineer. */
+"Download again" = "Download again";
+
+/* No comment provided by engineer. */
+"Download too big" = "Download too big";
+
+/* No comment provided by engineer. */
 "Downloads" = "Downloads";
 
 /* No comment provided by engineer. */
@@ -582,6 +615,9 @@
 
 /* Action sheet menu title */
 "Edit sounds" = "Edit sounds";
+
+/* No comment provided by engineer. */
+"Edit trusted domain" = "Edit trusted domain";
 
 /* No comment provided by engineer. */
 "Electric Guitar" = "Electric Guitar";
@@ -677,16 +713,7 @@
 "FA" = "FA";
 
 /* No comment provided by engineer. */
-"face detected" = "face detected";
-
-/* No comment provided by engineer. */
-"faceposition x" = "faceposition x";
-
-/* No comment provided by engineer. */
-"faceposition y" = "faceposition y";
-
-/* No comment provided by engineer. */
-"facesize" = "facesize";
+"Face detection" = "Face detection";
 
 /* No comment provided by engineer. */
 "Failed to import item" = "Failed to import item";
@@ -717,6 +744,18 @@
 
 /* paint */
 "Fill" = "מילוי";
+
+/* No comment provided by engineer. */
+"first face size" = "גודל פנים";
+
+/* No comment provided by engineer. */
+"first face visible" = "first face visible";
+
+/* No comment provided by engineer. */
+"first face x position" = "face x position";
+
+/* No comment provided by engineer. */
+"first face y position" = "face y position";
 
 /* No comment provided by engineer. */
 "Flashlight off" = "הפנס כבוי";
@@ -756,9 +795,6 @@
 
 /* No comment provided by engineer. */
 "Fr" = "שישי";
-
-/* Title of View where the user can see the frequently used bricks. */
-"Frequently used" = "Frequently used";
 
 /* No comment provided by engineer. */
 "Friday" = "יום ששי";
@@ -801,6 +837,12 @@
 
 /* No comment provided by engineer. */
 "gyro-sensor" = "gyro-sensor";
+
+/* No comment provided by engineer. */
+"head top x" = "head top x";
+
+/* No comment provided by engineer. */
+"head top y" = "head top y";
 
 /* No comment provided by engineer. */
 "Hello!" = "שלום!";
@@ -851,6 +893,9 @@
 "inclination y" = "inclination y";
 
 /* No comment provided by engineer. */
+"index of item" = "index of item";
+
+/* No comment provided by engineer. */
 "Information" = "מידע";
 
 /* No comment provided by engineer. */
@@ -858,6 +903,9 @@
 
 /* paint */
 "Inserted" = "הכנס";
+
+/* No comment provided by engineer. */
+"Internet" = "Internet";
 
 /* No comment provided by engineer. */
 "into list" = "into list";
@@ -932,6 +980,48 @@
 "Left" = "לשמאל";
 
 /* No comment provided by engineer. */
+"left ear x" = "left ear x";
+
+/* No comment provided by engineer. */
+"left ear y" = "left ear y";
+
+/* No comment provided by engineer. */
+"left eye center x" = "left eye center x";
+
+/* No comment provided by engineer. */
+"left eye center y" = "left eye center y";
+
+/* No comment provided by engineer. */
+"left eye inner x" = "left eye inner x";
+
+/* No comment provided by engineer. */
+"left eye inner y" = "left eye inner y";
+
+/* No comment provided by engineer. */
+"left eye outer x" = "left eye outer x";
+
+/* No comment provided by engineer. */
+"left eye outer y" = "left eye outer y";
+
+/* No comment provided by engineer. */
+"left eyebrow center x" = "left eyebrow center x";
+
+/* No comment provided by engineer. */
+"left eyebrow center y" = "left eyebrow center y";
+
+/* No comment provided by engineer. */
+"left eyebrow inner x" = "left eyebrow inner x";
+
+/* No comment provided by engineer. */
+"left eyebrow inner y" = "left eyebrow inner y";
+
+/* No comment provided by engineer. */
+"left eyebrow outer x" = "left eyebrow outer x";
+
+/* No comment provided by engineer. */
+"left eyebrow outer y" = "left eyebrow outer y";
+
+/* No comment provided by engineer. */
 "left-right only" = "left-right only";
 
 /* No comment provided by engineer. */
@@ -945,6 +1035,9 @@
 
 /* paint */
 "Line" = "קו";
+
+/* No comment provided by engineer. */
+"List name" = "List name";
 
 /* No comment provided by engineer. */
 "List name:" = "List name:";
@@ -1094,6 +1187,18 @@
 "Motion properties" = "Motion properties";
 
 /* No comment provided by engineer. */
+"mouth left corner x" = "mouth left corner x";
+
+/* No comment provided by engineer. */
+"mouth left corner y" = "mouth left corner y";
+
+/* No comment provided by engineer. */
+"mouth right corner x" = "mouth right corner x";
+
+/* No comment provided by engineer. */
+"mouth right corner y" = "mouth right corner y";
+
+/* No comment provided by engineer. */
 "Move" = "זוז";
 
 /* No comment provided by engineer. */
@@ -1148,7 +1253,7 @@
 "New message" = "הודעה חדשה";
 
 /* No comment provided by engineer. */
-"New project" = "New project";
+"New project" = "מיזם חדש";
 
 /* No comment provided by engineer. */
 "New text" = "טקסט חדש";
@@ -1191,6 +1296,12 @@
 
 /* No comment provided by engineer. */
 "No whitespace character allowed" = "No whitespace character allowed";
+
+/* No comment provided by engineer. */
+"nose x" = "nose x";
+
+/* No comment provided by engineer. */
+"nose y" = "nose y";
 
 /* No comment provided by engineer. */
 "not" = ". לא";
@@ -1239,6 +1350,9 @@
 
 /* No comment provided by engineer. */
 "on" = "הפעל";
+
+/* No comment provided by engineer. */
+"Once" = "Once";
 
 /* No comment provided by engineer. */
 "only 15 characters allowed" = "רק 15 תווים מותרים";
@@ -1313,7 +1427,7 @@
 "Place at " = "Place at ";
 
 /* No comment provided by engineer. */
-"Play" = "הפעל";
+"Play" = "ניגון";
 
 /* No comment provided by engineer. */
 "Play Phiro music\n" = "Play Phiro music\n";
@@ -1379,6 +1493,9 @@
 "Pointer" = "Pointer";
 
 /* No comment provided by engineer. */
+"Pose detection" = "Pose detection";
+
+/* No comment provided by engineer. */
 "position x" = "מיקום על ציר X";
 
 /* No comment provided by engineer. */
@@ -1403,16 +1520,16 @@
 "Project" = "פרויקט";
 
 /* No comment provided by engineer. */
-"Project name" = "Project name";
+"Project name" = "שם המיזם";
 
 /* No comment provided by engineer. */
 "Project Name is necessary!" = "Project Name is necessary!";
 
 /* No comment provided by engineer. */
-"Projects" = "תוכניות";
+"Projects" = "מיזמים";
 
 /* No comment provided by engineer. */
-"Projects on device" = "תוכניות";
+"Projects on device" = "המיזמים השמורים במכשיר";
 
 /* No comment provided by engineer. */
 "Properties" = "אובייקט";
@@ -1428,6 +1545,9 @@
 
 /* No comment provided by engineer. */
 "RE" = "RE";
+
+/* Title of brick category where the user can see his or her recently used bricks. */
+"Recently used" = "Recently used";
 
 /* No comment provided by engineer. */
 "Recording" = "הקלטה";
@@ -1463,7 +1583,7 @@
 "Rename image" = "שנה שם התמונה";
 
 /* No comment provided by engineer. */
-"Rename project" = "שנה שם תכנית";
+"Rename project" = "שינוי שם המיזם";
 
 /* No comment provided by engineer. */
 "Rename sound" = "שנה שם צליל";
@@ -1491,6 +1611,48 @@
 
 /* No comment provided by engineer. */
 "Right" = "ימינה";
+
+/* No comment provided by engineer. */
+"right ear x" = "right ear x";
+
+/* No comment provided by engineer. */
+"right ear y" = "right ear y";
+
+/* No comment provided by engineer. */
+"right eye center x" = "right eye center x";
+
+/* No comment provided by engineer. */
+"right eye center y" = "right eye center y";
+
+/* No comment provided by engineer. */
+"right eye inner x" = "right eye inner x";
+
+/* No comment provided by engineer. */
+"right eye inner y" = "right eye inner y";
+
+/* No comment provided by engineer. */
+"right eye outer x" = "right eye outer x";
+
+/* No comment provided by engineer. */
+"right eye outer y" = "right eye outer y";
+
+/* No comment provided by engineer. */
+"right eyebrow center x" = "right eyebrow center x";
+
+/* No comment provided by engineer. */
+"right eyebrow center y" = "right eyebrow center y";
+
+/* No comment provided by engineer. */
+"right eyebrow inner x" = "right eyebrow inner x";
+
+/* No comment provided by engineer. */
+"right eyebrow inner y" = "right eyebrow inner y";
+
+/* No comment provided by engineer. */
+"right eyebrow outer x" = "right eyebrow outer x";
+
+/* No comment provided by engineer. */
+"right eyebrow outer y" = "right eyebrow outer y";
 
 /* paint */
 "Rotate" = "סיבוב";
@@ -1538,13 +1700,25 @@
 "second " = "שנייה ";
 
 /* No comment provided by engineer. */
+"second face size" = "second face size";
+
+/* No comment provided by engineer. */
+"second face visible" = "second face visible";
+
+/* No comment provided by engineer. */
+"second face x position" = "second face x position";
+
+/* No comment provided by engineer. */
+"second face y position" = "second face y position";
+
+/* No comment provided by engineer. */
 "seconds" = "שניות";
 
 /* No comment provided by engineer. */
 "seconds " = "seconds ";
 
 /* No comment provided by engineer. */
-"Select all" = "בחר הכל";
+"Select all" = "לבחור הכול";
 
 /* bluetooth */
 "Select Arduino" = "Select Arduino";
@@ -1554,6 +1728,9 @@
 
 /* No comment provided by engineer. */
 "Select categories" = "Select categories";
+
+/* No comment provided by engineer. */
+"Select file" = "Select file";
 
 /* No comment provided by engineer. */
 "Select logical operator" = "Select logical operator";
@@ -1566,6 +1743,9 @@
 
 /* bluetooth */
 "Select Phiro" = "Select Phiro";
+
+/* No comment provided by engineer. */
+"Send web request to" = "Send web request to";
 
 /* No comment provided by engineer. */
 "Sending anonymous crash reports" = "Sending anonymous crash reports";
@@ -1593,6 +1773,12 @@
 
 /* No comment provided by engineer. */
 "Set background" = "הגדר רקע";
+
+/* No comment provided by engineer. */
+"Set background and wait" = "Set background and wait";
+
+/* No comment provided by engineer. */
+"Set background to number" = "Set background to number";
 
 /* No comment provided by engineer. */
 "Set brightness " = "הגדר בהירות ";
@@ -1641,6 +1827,9 @@
 
 /* No comment provided by engineer. */
 "Settings" = "הגדרות";
+
+/* literally; Sewing up a thread at the end of an embroidered pattern, so that said thread is fixed in the fabric. */
+"Sew up" = "Sew up";
 
 /* No comment provided by engineer. */
 "Show" = "הצג";
@@ -1706,10 +1895,16 @@
 "Stamped" = "Stamped";
 
 /* No comment provided by engineer. */
+"Start running stitch with length" = "Start running stitch with length";
+
+/* No comment provided by engineer. */
 "Start sound" = "התחל צליל";
 
 /* No comment provided by engineer. */
 "Start sound and wait" = "Start sound and wait";
+
+/* No comment provided by engineer. */
+"Start zigzag stitch with length" = "Start zigzag stitch with length";
 
 /* No comment provided by engineer. */
 "Steel Drum" = "Steel Drum";
@@ -1725,6 +1920,9 @@
 
 /* No comment provided by engineer. */
 "Stop all sounds" = "עצור את כל הצלילים";
+
+/* No comment provided by engineer. */
+"Stop current stitch" = "Stop current stitch";
 
 /* No comment provided by engineer. */
 "Stop Phiro motor" = "Stop Phiro motor";
@@ -1760,10 +1958,10 @@
 "Tap \"+\" to add backgrounds" = "Tap \"+\" to add backgrounds";
 
 /* No comment provided by engineer. */
-"Tap \"+\" to add looks" = "הקש על \"+\" כדי להוסיף מראה";
+"Tap \"+\" to add looks" = "יש להקיש על \"+\" כדי להוסיף מראות";
 
 /* No comment provided by engineer. */
-"Tap \"+\" to add scripts" = "הקש על \"+\" כדי להוסיף תסריט";
+"Tap \"+\" to add scripts" = "יש להקיש על \"+\" כדי להוסיף תסריטים";
 
 /* No comment provided by engineer. */
 "Tap \"+\" to add sounds" = "הקש על \"+\" כדי להוסיף צליל";
@@ -1772,7 +1970,7 @@
 "Tap \"+\" to add variables and lists" = "Tap \"+\" to add variables and lists";
 
 /* Button title at the settings screen to get to the terms of use and service. */
-"Terms of Use and Service" = "Terms of Use and Service";
+"Terms of Use and Service" = "תנאי השימוש והשירות";
 
 /* paint */
 "Text" = "טקסט";
@@ -1865,6 +2063,15 @@
 "touch position" = "touch position";
 
 /* No comment provided by engineer. */
+"touches actor or object" = "touches actor or object";
+
+/* No comment provided by engineer. */
+"touches edge" = "touches edge";
+
+/* No comment provided by engineer. */
+"touches finger" = "touches finger";
+
+/* No comment provided by engineer. */
 "transparency" = "שקיפות";
 
 /* No comment provided by engineer. */
@@ -1900,12 +2107,6 @@
 /* No comment provided by engineer. */
 "Unable to play that sound!\nMaybe this is no valid sound or the file is corrupt." = "Unable to play that sound!\nMaybe this is no valid sound or the file is corrupt.";
 
-/* No comment provided by engineer. */
-"Unable to play the selected sound. Your device is in silent mode. Please turn off silent mode by toggling the switch on the left side of your iPhone and tap on play again." = "Unable to play the selected sound. Your device is in silent mode. Please turn off silent mode by toggling the switch on the left side of your iPhone and tap on play again.";
-
-/* No comment provided by engineer. */
-"Unable to play the selected sound. Your device is in silent mode. Please turn off silent mode by toggling the switch on the right side of your iPad and tap on play again." = "Unable to play the selected sound. Your device is in silent mode. Please turn off silent mode by toggling the switch on the right side of your iPad and tap on play again.";
-
 /* paint */
 "underline" = "underline";
 
@@ -1940,7 +2141,7 @@
 "Unsupported Script:" = "Unsupported Script:";
 
 /* No comment provided by engineer. */
-"Upload project" = "עלו תוכנית";
+"Upload project" = "העלאת מיזם";
 
 /* No comment provided by engineer. */
 "Upload selected project" = "Upload selected project";
@@ -1958,10 +2159,16 @@
 "Use Phiro bricks" = "Use Phiro bricks";
 
 /* No comment provided by engineer. */
+"user language" = "user language";
+
+/* No comment provided by engineer. */
 "Username" = "שם משתמש";
 
 /* No comment provided by engineer. */
 "Username must not be blank" = "שם משתמש אינו יכול להיות ריק";
+
+/* No comment provided by engineer. */
+"Variable name" = "Variable name";
 
 /* No comment provided by engineer. */
 "Variable name:" = "Variable name:";
@@ -2000,9 +2207,6 @@
 "Views" = "Views";
 
 /* No comment provided by engineer. */
-"Visual sensors" = "Visual sensors";
-
-/* No comment provided by engineer. */
 "Wait" = "המתן";
 
 /* No comment provided by engineer. */
@@ -2010,6 +2214,9 @@
 
 /* No comment provided by engineer. */
 "We" = "We";
+
+/* No comment provided by engineer. */
+"Web access" = "גישה לרשת";
 
 /* No comment provided by engineer. */
 "Wednesday" = "Wednesday";
